cmd_20260207_16: guard against misplaced OpenDolphin work products

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,10 @@ archive/
 # Build artifacts
 web-client/
 artifacts/
+
+# Guard against accidentally copying OpenDolphin repos/work products into this repo
+OpenDolphin_WebClient/
+server-modernized/
+*.har
+*.log
+*.zip
